--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <br>
     <br>
     <a href="./groot-feature.html">Groot</a>
-
+    <br>
+    <br>
+    <a href="./wolverine-feat.html">Wolverine</a>
 </body>
 </html>
