--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
     <br>
     <a href="./groot-feature.html">Groot</a>
 
+    <br>
+    <br>
+    <a href="./floki-feature.html">Floki</a>
+
 </body>
 </html>
