--- a/gru.html
+++ b/gru.html
@@ -10,11 +10,15 @@
 
     <div class="" style="width: 200px; margin: 100px;">
 
-        <img src="./images/groot.jpeg" alt="" style="width: 100%;">
+        <img src="./images/Gru.jfif" alt="" style="width: 100%;">
+
+        <img src="./images/benz.png" alt="" style="width: 100%;">
 
         <br>
 
-        <h1>I am GROOT!</h1>
+        <h1>I am GRU!</h1><br>
+
+<h2>i will love to drive Benz to film house </h2>
 
         <br>
 
