--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1 class="">Movie Characters Home page</h1>
+    <h1 class=""></h1>
     <br>
     <br>
 
@@ -14,7 +14,8 @@
 
     <br>
     <br>
-    <a href="./groot-feature.html">Groot</a>
+    <a href="./gru.html">GRU</a>
+    
 
 </body>
 </html>
